WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275978
UI process should not be calling webCryptoMasterKey fetch on main thread
https://bugs.webkit.org/show_bug.cgi?id=275978
Summary
UI process should not be calling webCryptoMasterKey fetch on main thread
Nitin Mahendru
Reported
2024-06-27 19:00:00 PDT
Move the delegate to webCryptoMasterKeyAsync so that main thread is more responsive.
Attachments
Add attachment
proposed patch, testcase, etc.
Nitin Mahendru
Comment 1
2024-06-27 19:04:59 PDT
<
rdar://problem/129814280
>
Nitin Mahendru
Comment 2
2024-06-27 19:16:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30254
EWS
Comment 3
2024-07-03 19:29:43 PDT
Committed
280651@main
(795f182ee82b): <
https://commits.webkit.org/280651@main
> Reviewed commits have been landed. Closing PR #30254 and removing active labels.
Darin Adler
Comment 4
2025-07-12 19:17:26 PDT
Also needed for the non-delegate version built into WebKit, see
bug 295844
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug