remove webCryptoMasterKeyFetch from UI process main-thread https://bugs.webkit.org/show_bug.cgi?id=275978 rdar://129814280

Reviewed by Sihui Liu and Alex Christensen.

Add a new Async selector for fetching the webCryptoMasterKey in NavigationClient.
Replace the existing sync selector with an Async one in DataStoreDelegate.

This lets WebKit clients(Safari, for instance) have the option to fetch the master key off the
main-thread. The existing sync flow for fetching the key still works but has been marked
as legacy and will be removed in the future.

The DataStore async selector will now be used in all the Service worker tests and thus will be
tested.

* Source/WebKit/Sources.txt:
* Source/WebKit/UIProcess/API/APINavigationClient.h:
(API::NavigationClient::legacyWebCryptoMasterKey):
(API::NavigationClient::webCryptoMasterKey): Deleted.
* Source/WebKit/UIProcess/API/C/WKPage.cpp:
(WKPageSetPageNavigationClient):
* Source/WebKit/UIProcess/API/Cocoa/WKNavigationDelegatePrivate.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebsiteDataStore.mm:
* Source/WebKit/UIProcess/API/Cocoa/_WKWebsiteDataStoreDelegate.h:
* Source/WebKit/UIProcess/Cocoa/NavigationState.h:
* Source/WebKit/UIProcess/Cocoa/NavigationState.mm:
(WebKit::NavigationState::setNavigationDelegate):
(WebKit::NavigationState::NavigationClient::legacyWebCryptoMasterKey):
(WebKit::NavigationState::NavigationClient::webCryptoMasterKey): Deleted.
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::getWebCryptoMasterKey):
(WebKit::WebPageProxy::wrapCryptoKey):
(WebKit::WebPageProxy::unwrapCryptoKey):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::getWebCryptoMasterKey):
(WebKit::WebProcessProxy::wrapCryptoKey):
(WebKit::WebProcessProxy::unwrapCryptoKey):
* Source/WebKit/UIProcess/WebProcessProxy.h:
* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStoreClient.cpp: Copied from Tools/WebKitTestRunner/cocoa/TestWebsiteDataStoreDelegate.h.
(WebKit::WebsiteDataStoreClient::webCryptoMasterKey):
* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStoreClient.h:
(WebKit::WebsiteDataStoreClient::webCryptoMasterKey): Deleted.
(WebKit::WebsiteDataStoreClient::webCryptoMasterKeyAsync): Deleted.
(WebKit::WebsiteDataStoreClient::isAsyncMasterKeyDelegateSet): Deleted.
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:
* Tools/WebKitTestRunner/cocoa/TestWebsiteDataStoreDelegate.h:
* Tools/WebKitTestRunner/cocoa/TestWebsiteDataStoreDelegate.mm:
(-[TestWebsiteDataStoreDelegate webCryptoMasterKey:]):
(-[TestWebsiteDataStoreDelegate getWebCryptoMasterKey:]): Deleted.
(-[TestWebsiteDataStoreDelegate webCryptoMasterKey]): Deleted.

Canonical link: https://commits.webkit.org/280651@main